# Game-Engine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  abc.geproj  file  imgui.ini
.github/workflows/: CI.yml  linux.yml  macos-metal.yml  macos-vulkan.yml  macos.yml  windows.yml
cmake/: FetchDependencies.cmake  ScriptLibrary.cmake
dependencies/: CMakeLists.txt
editor/: CMakeLists.txt  Editor.cpp  Editor.hpp  EditorCamera.cpp  EditorCamera.hpp  EditorUI.cpp  ImGuiInputContext.cpp  ImGuiInputContext.hpp  ImGuiPanels.cpp  ImGuiRenderPass.cpp  ImGuiRenderPass.hpp  Project.cpp  Project.hpp  StarterContent.cpp  StarterContent.hpp  Viewport.cpp  Viewport.hpp  ViewportFrameBuff.cpp  ViewportFrameBuff.hpp  ViewportFrameBuffer.cpp  ViewportFrameBuffer.hpp  ge-editor.entitlements  main.cpp  renderImgui.cpp  tinyfiledialogs.cpp
editor/UI/: Button.hpp  Child.hpp  ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  EditorUI.cpp  EditorUI.hpp  EntityInspectorPanel.cpp  EntityInspectorPanel.hpp  FileOpenDialog.cpp  FileOpenDialog.hpp  FileSaveDialog.cpp  FileSaveDialog.hpp  Group.hpp  MainMenuBar.cpp  MainMenuBar.hpp  Pane.hpp  ProjectPropertiesModal.cpp  ProjectPropertiesModal.hpp  ProjectPropertiesPanel.cpp  ProjectPropertiesPanel.hpp  RessourceBrowserPanel.hpp  SameLine.hpp  SceneGraphPanel.cpp  SceneGraphPanel.hpp  States.hpp  Text.hpp  TileGrid.hpp  View.hpp  ViewBase.hpp  ViewportPanel.cpp  ViewportPanel.hpp
editor/imgui/: EntityInspectorPanel.cpp  NewProjectPopupModal.cpp  NewProjectPopupModal.hpp  ProjectPropertiesPopupModal.cpp  ProjectPropertiesPopupModal.hpp  SceneGraphPanel.cpp  SceneGraphPanel.hpp  ViewportPanel.cpp
editor/imguiPanels/: EntityInspectorPanel.cpp  EntityInspectorPanel.hpp  ProjectPropertiesPanel.cpp  ProjectPropertiesPanel.hpp  SceneGraphPanel.cpp  ViewportPanel.cpp  ViewportPanel.hpp
editor/imgui_render/: asset_manager_debug_window.cpp  componentEditWidget.cpp  imgui_render.hpp  properties_window.cpp  scene_graph.cpp
editor/yaml_convert/: convert_asset.cpp  convert_asset.hpp  convert_components.cpp  convert_components.hpp  convert_input.cpp  convert_input.hpp  convert_project.cpp  convert_project.hpp  convert_vector.cpp  convert_vector.hpp
engine/: Application.cpp  Application.hpp  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Macros.hpp  Scene.cpp  Scene.hpp  Script.cpp  Script.hpp
engine/ECS/: Archetype.cpp  Archetype.hpp  Components.cpp  Components.hpp  ECSView.hpp  ECSWorld.cpp  ECSWorld.hpp  Entity.cpp  Entity.hpp
engine/InputManager/: Input.cpp  Input.hpp  InputContext.cpp  InputContext.hpp  Mapper.cpp  Mapper.hpp
engine/Renderer/: Mesh.hpp  Renderer.cpp  Renderer.hpp
examples/: CMakeLists.txt
examples/bistro/: CMakeLists.txt  bistro.geproj  bistro_scriptLib.dylib
examples/bistro/resources/: .gitignore
examples/bistro/scripts/: PlayerController.cpp  Scaling.cpp
examples/project1/: CMakeLists.txt  project1.geproj
examples/project1/scripts/: CMakeLists.txt  CubeRotate.cpp  PlayerControl.cpp  PlayerController.cpp  Rotating.cpp  Scaling.cpp  ScriptLib.cpp  ScriptLib.hpp  rotating.cpp
exemples/: CMakeLists.txt
exemples/sandbox/: CMakeLists.txt
exemples/sandbox/src/: sandbox.cpp
include/Game-Engine/: Application.hpp  Archetype.hpp  Archetype.inl  ArchetypeIterator.inl  Asset.hpp  AssetContainer.hpp  AssetLoader.hpp  AssetLocation.hpp  AssetManager.hpp  AssetManagerView.hpp  BuiltInPasses.hpp  Components.hpp  ECSView.hpp  ECSViewIterator.inl  ECSWorld.hpp  ECSWorldIterator.inl  ECSWorldView.hpp  Engine.hpp  Entity.hpp  Event.hpp  Export.hpp  FrameGraph.hpp  FramePassBuilder.hpp  Game.hpp  ICamera.hpp  Input.hpp  InputContext.hpp  InputFwd.hpp  InputManager.hpp  InputMapper.hpp  Inputs.hpp  KeyCodes.hpp  ManagableAsset.hpp  Mapper.hpp  Material.hpp  Mesh.hpp  MeshAssetLoader.hpp  RawInput.hpp  RawInputs.hpp  RenderMethod.hpp  (+10 more)
shaders/: CMakeLists.txt  FrameData.slang  Light.slang  Material.slang  default.fs  default.metal  default.vs  flat_color.slang  phong_shading.slang  shader.h  textured.slang
src/: Application.cpp  Archetype.cpp  AssetContainer.cpp  AssetManager.cpp  AssetManagerView.cpp  BuiltInPasses.cpp  ECSWorld.cpp  ECSWorld.hpp  Engine.cpp  Entity.hpp  FlatGeometryPassBuilder.cpp  FrameGraph.cpp  FramePassBuilder.cpp  GPURessourceManager.cpp  GPURessourceManager.hpp  Game.cpp  Input.cpp  InputContext.cpp  InputContext.hpp  InputManager.cpp  InputManager.hpp  InputMapper.cpp  Mapper.cpp  MeshAssetLoader.cpp  Renderer.cpp  Scene.cpp  Script.hpp  ScriptLibrary.cpp  ScriptLibraryManager.cpp  TextureAssetLoader.cpp  TextureTable.cpp  TextureTable.hpp  TexturedGeometryPassBuilder.cpp  ThreadPool.cpp  Window.cpp  main.cpp
src/Application/: Application.hpp
src/AssetManager/: AssetManager.cpp  Mesh.cpp  Mesh.hpp  MeshImpl.hpp  MeshLoading.cpp  TextureLoading.cpp
src/ECS/: Archetype.cpp  Archetype.hpp  ECSView.hpp  ECSWorld.cpp  Entity.cpp  InternalComponents.hpp
src/Editor/: Editor.cpp  Editor.hpp  ImGuiPanels.cpp  Systems.cpp  main.cpp
src/Engine/: EditorCamera.cpp  EditorCamera.hpp  Engine.cpp  Engine.hpp  EngineIntern.cpp  EngineIntern.hpp  EngineSingleton.cpp  EngineSingleton.hpp  ImGuiPanels.cpp  ImGuiRender.cpp  InternalEngine.cpp  InternalEngine.hpp  Systems.cpp  loadMeshes.cpp  main.cpp  makeUI.cpp
src/Game/: Game.cpp  StarterContent.hpp
src/InputManager/: Input.cpp  InputContext.cpp  InputManager.cpp  InputManagerIntern.cpp  InputManagerIntern.hpp  Mapper.cpp
src/Renderer/: DefaultRenderMethod.cpp  DefaultRenderMethod.hpp  GPURessourceManager.hpp  RenderMethod.cpp  RenderMethod.hpp  Renderer.cpp  Renderer.hpp
src/Scene/: AssetManager.cpp  Entity.cpp  Scene.cpp  (+1 more)
tests/: AssetManager_testCases.cpp  CMakeLists.txt  ECS_testCases.cpp  Entity_testCases.cpp  Script_testCases.cpp  ThreadPool_testCases.cpp  TypeList_testCases.cpp  serialization_testCases.cpp
tests/resources/: triangle.gltf  triangle_missing_position.gltf  triangle_no_scene.gltf  triangle_transformed.gltf  two_primitives.gltf  two_triangles.gltf
tests/scriptLib/: CMakeLists.txt  TestScript.cpp
(+3 files in other folders)
